--- a/index.html
+++ b/index.html
@@ -280,8 +280,6 @@ html:after {
                         <div class="spacer d-md-none d-lg-none" data-height="30"></div>
                     </div>
 
-                   
-
                     <div class="col-md-3 col-sm-6">
                         <!-- fact item -->
                         <div class="fact-item">
@@ -303,6 +301,19 @@ html:after {
                                 <p class="mb-0">Positive Reviews</p>
                             </div>
                         </div>
+                      <div class="spacer d-md-none d-lg-none" data-height="30"></div>
+                    </div>
+                  
+                  <div class="col-md-3 col-sm-6">
+                        <!-- fact item -->
+                        <div class="fact-item">
+                            <span class="icon icon-globe"></span>
+                            <div class="details">
+                                <h3 class="mb-0 mt-0 number"><em class="count">100</em>+</h3>
+                                <p class="mb-0">Friends</p>
+                            </div>
+                        </div>
+                        <div class="spacer d-md-none d-lg-none" data-height="30"></div>
                     </div>
 
                 </div>
