--- a/index.html
+++ b/index.html
@@ -309,8 +309,8 @@ html:after {
                         <div class="fact-item">
                             <span class="icon icon-globe"></span>
                             <div class="details">
-                                <h3 class="mb-0 mt-0 number"><em class="count">100</em>+</h3>
-                                <p class="mb-0">Friends</p>
+                                <h3 class="mb-0 mt-0 number"><em class="count" id="ip"></em></h3>
+                                <p class="mb-0">Your IP</p>
                             </div>
                         </div>
                         <div class="spacer d-md-none d-lg-none" data-height="30"></div>
