🐷🎃 Checkpoint ./index.html:31916058/39

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ html:after {
                         <div class="fact-item">
                             <span class="icon icon-globe"></span>
                             <div class="details">
-                                <h3 class="mb-0 mt-0 number"><em class="count" id="ip"></em></h3>
+                                <h3 class="mb-0 mt-0 number" id="ip"></h3>
                                 <p class="mb-0">Your IP</p>
                             </div>
                         </div>
