--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ html:after {
                 <!-- scroll down mouse wheel -->
                 <div class="scroll-down">
                     <a href="#about" class="mouse-wrapper">
-                        <span>Scroll Down</span>
+                        <span id="test">Scroll Down</span>
                         <span class="mouse">
 						<span class="wheel"></span>
                         </span>
