🏔🐷 Checkpoint ./index.html:31916058/984

--- a/index.html
+++ b/index.html
@@ -383,6 +383,15 @@ html:after {
                             <p class="mb-0" style="color: #010101;">A simple YouTube Videos Downloader.</p>
                         </div>
                     </div>
+          
+                    <div class="col-md-4">
+                        <!-- service box -->
+                        <div class="service-box rounded data-background padding-30 text-center shadow-blue" data-color="#ff0000">
+                            <img src="images/js.svg" alt="CDN" height="100" width="100" />
+                            <h3 class="mb-3 mt-0" style="color: #ffff00;"><a href="https://dl.spapi.ga" target="_blank">Simple API Client</a></h3>
+                            <p class="mb-0" style="color: #010101;">Request JSON responses easily.</p>
+                        </div>
+                    </div>
 
                 </div>
 
