🦂🐽 Checkpoint ./index.html:31916058/97

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ html:after {
   <meta property="og:image" content="https://avt.spapi.ga/e?userid=588336437011939341">
   <meta property="theme-color" data-react-helmet="true" content="#FF0000" />
     <meta name="copyright" content="(C) Duck Dev">
+  <meta name="google-site-verification" content="TgzP7QBk7aJUOU81Rk3-YatlUgY5mgScp_cm4NDWsTE" />
     <meta name="robots" content="all" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="shortcut icon" type="image/x-icon" href="https://avt.spapi.ga/e?userid=588336437011939341">
