🌥🏩 Checkpoint ./index.html:31916058/110

--- a/index.html
+++ b/index.html
@@ -609,11 +609,13 @@ html:after {
                             <li><b>Developer :</b>&nbsp; <a href="https://discord.com/users/588336437011939341" style="color: #05caf7;"> Server Developer#9447</a></li>
                         </div>
                     </div> 
+              </div>
+          </div>
   </section>
 
         <footer class="footer">
             <div class="container">
-                <span class="copyright">© 2021 Duck Dev.</span>
+                <span class="copyright">© 2022 Duck Dev.</span>
             </div>
         </footer>
 
