🎖☕️ Checkpoint ./index.html:31916058/75

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@ html:after {
     <meta name="copyright" content="(C) Duck Dev">
   <meta name="google-site-verification" content="TgzP7QBk7aJUOU81Rk3-YatlUgY5mgScp_cm4NDWsTE" />
     <meta name="robots" content="all" />
+  <meta name="msvalidate.01" content="7EE964A5F07FCC7A69530A56265277D8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="shortcut icon" type="image/x-icon" href="https://avt.spapi.ga/e?userid=588336437011939341">
   <link type="application/json+oembed" href="https://duck.is-a.dev/oembed.json" />
