😘👷 Checkpoint ./index.html:31916058/283

--- a/index.html
+++ b/index.html
@@ -225,10 +225,10 @@ html:after {
                                     <div class="skill-item">
                                         <div class="skill-info clearfix">
                                             <h4 class="float-left mb-3 mt-0">API fixation</h4>
-                                            <span class="float-right">97%</span>
+                                            <span class="float-right">100%</span>
                                         </div>
                                         <div class="progress">
-                                            <div class="progress-bar data-background" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="97" data-color="#FF0000" style="background-color: #fbb034; background-image: linear-gradient(315deg, #ff9900 0%, #ffee20 74%);">
+                                            <div class="progress-bar data-background" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="100" data-color="#FF0000" style="background-color: #fbb034; background-image: linear-gradient(315deg, #ff9900 0%, #ffee20 74%);">
                                             </div>
                                         </div>
                                         <div class="spacer" data-height="20"></div>
@@ -251,10 +251,10 @@ html:after {
                                     <div class="skill-item">
                                         <div class="skill-info clearfix">
                                             <h4 class="float-left mb-3 mt-0">Discord Bot Fixing</h4>
-                                            <span class="float-right">95%</span>
+                                            <span class="float-right">100%</span>
                                         </div>
                                         <div class="progress">
-                                            <div class="progress-bar data-background" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="95" data-color="#6C6CE5" style="background-color: #6617cb; background-image: linear-gradient(315deg, #5a07c3 0%, #a733ff 74%);}">
+                                            <div class="progress-bar data-background" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="100" data-color="#6C6CE5" style="background-color: #6617cb; background-image: linear-gradient(315deg, #5a07c3 0%, #a733ff 74%);}">
                                             </div>
                                         </div>
                                     </div>
@@ -342,7 +342,7 @@ html:after {
                         <div class="service-box rounded data-background padding-30 text-center text-light shadow-pink" data-color="#4ED5F2">
                             <img src="images/vscode.svg" width="85px" alt="code" />
                           <h3 class="mb-3 mt-0" style="color: #de5833;"><a href="https://www.craftblurbot.cf" target="_blank">CraftBlur Family</a></h3>
-                          <p class="mb-0" style="color: #010101;">CraftBlur Family has 2 bots. CraftBlur and CraftBlur Music.</a></p>                            
+                          <p class="mb-0" style="color: #010101;">CraftBlur Family has 2 bots. CraftBlur and CraftBlur Music.</p>                            
                         </div>
                         <div class="spacer d-md-none d-lg-none" data-height="30"></div>
                     </div>
@@ -425,18 +425,18 @@ html:after {
                             <!-- timeline item -->
                             <div class="timeline-container wow fadeInUp">
                                 <div class="content">
-                                    <span class="time">2021 - Present</span>
+                                    <span class="time">2022 - Present</span>
                                     <h3 class="title">Higher Secondary</h3>
-                                    <p>I will give board exams in 2022. Prepairing for that.</p>
+                                    <p>Passed class 10th exam. Prepairing for class 11.</p>
                                 </div>
                             </div>
 
                             <!-- timeline item -->
                             <div class="timeline-container wow fadeInUp" data-wow-delay="0.2s">
                                 <div class="content">
-                                    <span class="time">2019 - Past</span>
-                                    <h3 class="title">Secondary School</h3>
-                                    <p>This COVID made schools closed. :(</p>
+                                    <span class="time">2022 - Present</span>
+                                    <h3 class="title">Discord</h3>
+                                    <p>Discord bot got approved by top.gg</p>
                                 </div>
                             </div>
 
@@ -499,8 +499,6 @@ html:after {
                     </div>
 
                 </div>
-
-            </div>
 
         </section>
 
