--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@ html:after {
                             <span class="icon icon-globe"></span>
                             <div class="details">
                                 <h3 class="mb-0 mt-0 number" id="ip"></h3>
-                                <p class="mb-0">Your IP</p>
+                                <p class="mb-0">Your IP <strong>(NOTE: THESE STATS ARE JUST FOR DECORATION. I DON'T STORE ANYTHING)</strong></p>
                             </div>
                         </div>
                         <div class="spacer d-md-none d-lg-none" data-height="30"></div>
