🔮🍲 Checkpoint ./index.html:31916058/485

--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@ html:after {
     <meta property="og:description" content="I am a 15 year old teen with coding skills. Created an API, 2 discord bots, websites.">
   <meta property="og:title" content="Duck Dev | Developing For The Future" />
   <meta name="twitter:card" content="summary_large_image">
-  <meta property="og:image" content="https://avt.spapi.ga/e?userid=588336437011939341">
+  <meta property="og:image" content="https://cdn.spapi.ga/avatar.png">
   <meta property="theme-color" data-react-helmet="true" content="#FF0000" />
     <meta name="copyright" content="(C) Duck Dev">
   <meta name="google-site-verification" content="TgzP7QBk7aJUOU81Rk3-YatlUgY5mgScp_cm4NDWsTE" />
     <meta name="robots" content="all" />
   <meta name="msvalidate.01" content="7EE964A5F07FCC7A69530A56265277D8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="shortcut icon" type="image/x-icon" href="https://avt.spapi.ga/e?userid=588336437011939341">
+    <link rel="shortcut icon" type="image/x-icon" href="https://cdn.spapi.ga/avatar.png">
   <link type="application/json+oembed" href="https://duck.is-a.dev/oembed.json" />
 
     <!-- STYLESHEETS -->
@@ -104,7 +104,6 @@ html:after {
                     type="button"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav ml-auto scrollspy">
-                        <li class="nav-item"><a class="nav-link" href="#home">Me</a></li>
                         <li class="nav-item"><a href="#about" class="nav-link">About Me</a></li>
                         <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
                         <li class="nav-item"><a href="#lih" class="nav-link">Life is Hard!!!</a></li>
@@ -129,7 +128,7 @@ html:after {
                 <!-- intro -->
                 <div class="intro">
                     <!-- avatar image -->
-                    <img src="https://avt.spapi.ga/e?userid=588336437011939341" alt="Avatar" class="mb-4" height="250" width="250" />
+                    <img src="https://cdn.spapi.ga/avatar.png" alt="Avatar" class="mb-4" height="250" width="250" />
 
                     <!-- info -->
                     <h1 class="mb-2 mt-0">Duck Dev</h1>
@@ -204,7 +203,7 @@ html:after {
                     <div class="col-md-3">
                         <div class="text-center text-md-left">
                             <!-- avatar image -->
-                            <img src="https://avt.spapi.ga/e?userid=588336437011939341" alt="avatar" />
+                            <img src="https://cdn.spapi.ga/avatar.png" alt="avatar" />
                         </div>
                         <div class="spacer d-md-none d-lg-none" data-height="30"></div>
                     </div>
@@ -371,7 +370,7 @@ html:after {
                     <div class="col-md-4">
                         <!-- service box -->
                         <div class="service-box rounded data-background padding-30 text-center shadow-red" data-color="#5865F2">
-                            <img src="https://avt.spapi.ga/e?userid=588336437011939341" alt="CDN" height="100" width="100" />
+                            <img src="https://cdn.spapi.ga/avatar.png" alt="CDN" height="100" width="100" />
                             <h3 class="mb-3 mt-0" style="color: #ff0000;"><a href="https://cdn.spapi.ga" target="_blank">CDN</a></h3>
                             <p class="mb-0" style="color: #010101;">My own CDN with some random memes.</p>
                         </div>
