🐾👞 Checkpoint ./index.html:31916058/217

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ html:after {
 			<li class="list-inline-item"><a href="https://www.npmjs.com/~serverdeveloper9447"><i class="fab fa-npm" aria-hidden="true"></i></a></li>
 			<li class="list-inline-item"><a href="https://twitter.com/Soumalyaplayz"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
                         <li class="list-inline-item"><a href="https://github.com/ServerDeveloper9447"><i class="fab fa-github" aria-hidden="true"></i></a></li>
-                        <li class="list-inline-item"><a href="https://discord.gg/VqA92g8"><i class="fab fa-discord" aria-hidden"true"></i></a></li>
+                        <li class="list-inline-item"><a href="https://discord.gg/VqA92g8"><i class="fab fa-discord" aria-hidden="true"></i></a></li>
                     </ul>
 
                     <!-- buttons -->
@@ -194,7 +194,7 @@ html:after {
             <div class="container">
 
                 <!-- section title -->
-                <h2 class="section-title wow fadeInUp">About Me The Legendary</h2>
+                <h2 class="section-title wow fadeInUp">About Me</h2>
 
                 <div class="spacer" data-height="60"></div>
 
@@ -213,7 +213,7 @@ html:after {
                             <div class="row">
                                 <div class="col-md-6">
                                     <!-- about text -->
-                                    <p>I am Duck Dev aka Server Developer#9447. I develop bots, websites, APIs and more.</p>
+                                    <p>I am Duck Dev aka Soumalya Ghosh. I develop bots, websites, APIs and more.</p>
                                     <div class="mt-3">
                                         <a href="https://discord.gg/VqA92g8" class="btn btn-default">Join Me.</a>
                                     </div>
@@ -223,11 +223,11 @@ html:after {
                                     <!-- skill item -->
                                     <div class="skill-item">
                                         <div class="skill-info clearfix">
-                                            <h4 class="float-left mb-3 mt-0">API fixation</h4>
-                                            <span class="float-right">100%</span>
+                                            <h4 class="float-left mb-3 mt-0">Guilded Bot</h4>
+                                            <span class="float-right">21%</span>
                                         </div>
                                         <div class="progress">
-                                            <div class="progress-bar data-background" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="100" data-color="#FF0000" style="background-color: #fbb034; background-image: linear-gradient(315deg, #ff9900 0%, #ffee20 74%);">
+                                            <div class="progress-bar data-background" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="21" data-color="#FF0000" style="background-color: #fbb034; background-image: linear-gradient(315deg, #ff9900 0%, #ffee20 74%);">
                                             </div>
                                         </div>
                                         <div class="spacer" data-height="20"></div>
@@ -236,11 +236,11 @@ html:after {
                                     <!-- skill item -->
                                     <div class="skill-item">
                                         <div class="skill-info clearfix">
-                                            <h4 class="float-left mb-3 mt-0">Discord Server Members</h4>
-                                            <span class="float-right">89%</span>
+                                            <h4 class="float-left mb-3 mt-0">Discord Bot Verification</h4>
+                                            <span class="float-right">50%</span>
                                         </div>
                                         <div class="progress">
-                                            <div class="progress-bar data-background" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="89" data-color="#F47FFF" style="background-color: #bf033b; background-image: linear-gradient(315deg, #ca2858 0%, #ff6319 74%);">
+                                            <div class="progress-bar data-background" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="50" data-color="#F47FFF" style="background-color: #bf033b; background-image: linear-gradient(315deg, #ca2858 0%, #ff6319 74%);">
                                             </div>
                                         </div>
                                         <div class="spacer" data-height="20"></div>
@@ -249,11 +249,11 @@ html:after {
                                     <!-- skill item -->
                                     <div class="skill-item">
                                         <div class="skill-info clearfix">
-                                            <h4 class="float-left mb-3 mt-0">Discord Bot Fixing</h4>
-                                            <span class="float-right">100%</span>
+                                            <h4 class="float-left mb-3 mt-0">Guilded Projects</h4>
+                                            <span class="float-right">12%</span>
                                         </div>
                                         <div class="progress">
-                                            <div class="progress-bar data-background" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="100" data-color="#6C6CE5" style="background-color: #6617cb; background-image: linear-gradient(315deg, #5a07c3 0%, #a733ff 74%);}">
+                                            <div class="progress-bar data-background" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="12" data-color="#6C6CE5" style="background-color: #6617cb; background-image: linear-gradient(315deg, #5a07c3 0%, #a733ff 74%);}">
                                             </div>
                                         </div>
                                     </div>
