--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@ html:after {
 			<li class="list-inline-item"><a href="https://twitter.com/Soumalyaplayz"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
                         <li class="list-inline-item"><a href="https://github.com/ServerDeveloper9447"><i class="fab fa-github" aria-hidden="true"></i></a></li>
                         <li class="list-inline-item"><a href="https://discord.gg/VqA92g8"><i class="fab fa-discord" aria-hidden="true"></i></a></li>
+                      <li class="list-inline-item"><a href="https://guilded.gg/u/duckdev"><i class="fab fa-guilded" aria-hidden="true"></i></a></li>
                     </ul>
 
                     <!-- buttons -->
