🌾💾 Checkpoint ./index.html:31916058/182

--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@ html:after {
     <meta property="og:description" content="I am a 15 year old teen with coding skills. Created an API, 2 discord bots, websites.">
   <meta property="og:title" content="Duck Dev | Developing For The Future" />
   <meta name="twitter:card" content="summary_large_image">
-  <meta property="og:image" content="https://cdn.spapi.ga/avatar.png">
+  <meta property="og:image" content="https://cdn.spapi.online/avatar.png">
   <meta property="theme-color" data-react-helmet="true" content="#FF0000" />
     <meta name="copyright" content="(C) Duck Dev">
   <meta name="google-site-verification" content="TgzP7QBk7aJUOU81Rk3-YatlUgY5mgScp_cm4NDWsTE" />
     <meta name="robots" content="all" />
   <meta name="msvalidate.01" content="7EE964A5F07FCC7A69530A56265277D8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="shortcut icon" type="image/x-icon" href="https://cdn.spapi.ga/avatar.png">
+    <link rel="shortcut icon" type="image/x-icon" href="https://cdn.spapi.online/avatar.png">
   <link type="application/json+oembed" href="https://duck.is-a.dev/oembed.json" />
 
     <!-- STYLESHEETS -->
@@ -128,7 +128,7 @@ html:after {
                 <!-- intro -->
                 <div class="intro">
                     <!-- avatar image -->
-                    <img src="https://cdn.spapi.ga/avatar.png" alt="Avatar" class="mb-4" height="250" width="250" />
+                    <img src="https://cdn.spapi.online/avatar.png" alt="Avatar" class="mb-4" height="250" width="250" />
 
                     <!-- info -->
                     <h1 class="mb-2 mt-0">Duck Dev | Soumalya Ghosh</h1>
@@ -204,7 +204,7 @@ html:after {
                     <div class="col-md-3">
                         <div class="text-center text-md-left">
                             <!-- avatar image -->
-                            <img src="https://cdn.spapi.ga/avatar.png" alt="avatar" />
+                            <img src="https://cdn.spapi.online/avatar.png" alt="avatar" />
                         </div>
                         <div class="spacer d-md-none d-lg-none" data-height="30"></div>
                     </div>
@@ -352,7 +352,7 @@ html:after {
                         <!-- service box -->
                         <div class="service-box rounded data-background padding-30 text-center text-light shadow-blue" data-color="#6C6CE5">
                             <img src="images/js.svg" width="85px" alt="npm wrapper" />
-                            <h3 class="mb-3 mt-0" style="color: #CC0000;"><a href="https://spapi.ga" target="_blank">API</a></h3>
+                            <h3 class="mb-3 mt-0" style="color: #CC0000;"><a href="https://spapi.online" target="_blank">API</a></h3>
                             <p class="mb-0" style="color: #010101;">Making a advanced API throught Javascript is probably my first step towards being a full stack dev.</p>
                         </div>
                         <div class="spacer d-md-none d-lg-none" data-height="30"></div>
@@ -370,8 +370,8 @@ html:after {
                     
                     <!--div class="col-md-4">
                         <div class="service-box rounded data-background padding-30 text-center shadow-red" data-color="#5865F2">
-                            <img src="https://cdn.spapi.ga/avatar.png" alt="CDN" height="100" width="100" />
-                            <h3 class="mb-3 mt-0" style="color: #ff0000;"><a href="https://cdn.spapi.ga" target="_blank">CDN</a></h3>
+                            <img src="https://cdn.spapi.online/avatar.png" alt="CDN" height="100" width="100" />
+                            <h3 class="mb-3 mt-0" style="color: #ff0000;"><a href="https://cdn.spapi.online" target="_blank">CDN</a></h3>
                             <p class="mb-0" style="color: #010101;">My own CDN with some random memes.</p>
                         </div>
                     </div>
@@ -379,7 +379,7 @@ html:after {
                     <div class="col-md-4">
                         <div class="service-box rounded data-background padding-30 text-center shadow-blue" data-color="#ff6257">
                             <img src="https://cdn.glitch.me/2a4d780f-b9e8-4739-9886-831c1d5fcdb0%2Fpngaaa.com-112249.png?v=1638016765488" alt="CDN" height="100" width="100" />
-                            <h3 class="mb-3 mt-0" style="color: #00ff00;"><a href="https://dl.spapi.ga" target="_blank">Youtube Video Downloader</a></h3>
+                            <h3 class="mb-3 mt-0" style="color: #00ff00;"><a href="https://dl.spapi.online" target="_blank">Youtube Video Downloader</a></h3>
                             <p class="mb-0" style="color: #010101;">A simple YouTube Videos Downloader.</p>
                         </div>
                     </div>
@@ -387,7 +387,7 @@ html:after {
                     <div class="col-md-4">
                         <div class="service-box rounded data-background padding-30 text-center shadow-blue" data-color="#ff0000">
                             <img src="images/js.svg" alt="CDN" height="100" width="100" />
-                            <h3 class="mb-3 mt-0" style="color: #ffff00;"><a href="https://dl.spapi.ga" target="_blank">Simple API Client</a></h3>
+                            <h3 class="mb-3 mt-0" style="color: #ffff00;"><a href="https://dl.spapi.online" target="_blank">Simple API Client</a></h3>
                             <p class="mb-0" style="color: #010101;">Request JSON responses easily.</p>
                         </div>
                     </div-->
