🕌👚 Checkpoint ./index.html:31916058/1079

--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@ html:after {
                           <!-- timeline item -->
                             <div class="timeline-container wow fadeInUp">
                                 <div class="content">
-                                    <span class="time">2022 - 2023</span>
+                                    <span class="time">2023 - Present</span>
                                     <h3 class="title">Higher Secondary</h3>
                                     <p>Passed class 11th exam. Prepairing for class 12 boards.</p>
                                 </div>
@@ -432,26 +432,8 @@ html:after {
                             <div class="timeline-container wow fadeInUp">
                                 <div class="content">
                                     <span class="time">2022 - 2023</span>
-                                    <h3 class="title">Higher Secondary</h3>
+                                    <h3 class="title">Secondary</h3>
                                     <p>Passed class 10th exam. Prepairing for class 11.</p>
-                                </div>
-                            </div>
-
-                            <!-- timeline item -->
-                            <div class="timeline-container wow fadeInUp" data-wow-delay="0.2s">
-                                <div class="content">
-                                    <span class="time">2022 - 2023</span>
-                                    <h3 class="title">Discord</h3>
-                                    <p>Discord bot got approved by top.gg</p>
-                                </div>
-                            </div>
-
-                            <!-- timeline item -->
-                            <div class="timeline-container wow fadeInUp" data-wow-delay="0.4s">
-                                <div class="content">
-                                    <span class="time">Before 2019</span>
-                                    <h3 class="title">Happy Life</h3>
-                                    <p>Happy coding happy life.</p>
                                 </div>
                             </div>
 
@@ -610,8 +592,8 @@ html:after {
                         <div class="contact-info">
                             <h3 class="wow fadeInUp">Let's talk about coding!</h3>
                             <p class="wow fadeInUp">Send me an <a href="mailto:craftblurdiscord@gmail.com">Email</a>. 👋</p>
-                            <li><b>Email :</b>&nbsp; <a href="mailto:craftblurdiscord@gmail.com" style="color: #05caf7;">craftblurdiscord@gmail.com</a></li>
-                            <li><b>Developer :</b>&nbsp; <a href="https://discord.com/users/588336437011939341" style="color: #05caf7;"> Server Developer#9447</a></li>
+                            <li><b>Email :</b>&nbsp; <a href="mailto:craftblurdiscord+portfolio@gmail.com" style="color: #05caf7;">craftblurdiscord@gmail.com</a></li>
+                            <li><b>Developer :</b>&nbsp; <a href="https://discord.com/users/588336437011939341" style="color: #05caf7;"> @serverdeveloper</a> <a href="https://guilded.gg/u/duckdev">Guilded</a></li>
                         </div>
                     </div> 
               </div>
