--- a/index.html
+++ b/index.html
@@ -340,8 +340,8 @@ html:after {
                     <div class="col-md-4">
                         <!-- service box -->
                         <div class="service-box rounded data-background padding-30 text-center text-light shadow-pink" data-color="#4ED5F2">
-                            <img src="https://pg.craftblurbot.cf/favicon.ico" width="85px" alt="code" class="rounded" />
-                          <h3 class="mb-3 mt-0" style="color: #de5833;"><a href="https://pg.craftblurbot.cf" target="_blank">Power Guilds Bots</a></h3>
+                            <img src="https://pg.spapi.online/favicon.ico" width="85px" alt="code" class="rounded" />
+                          <h3 class="mb-3 mt-0" style="color: #de5833;"><a href="https://pg.spapi.online" target="_blank">Power Guilds Bots</a></h3>
                           <p class="mb-0" style="color: #010101;">Powerful bot giving a new shape to Guilded servers.</p>                            
                         </div>
                         <div class="spacer d-md-none d-lg-none" data-height="30"></div>
