--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@ html:after {
     <meta property="og:description" content="I am a 15 year old teen with coding skills. Created an API, 2 discord bots, websites.">
   <meta property="og:title" content="Duck Dev | Developing For The Future" />
   <meta name="twitter:card" content="summary_large_image">
-  <meta property="og:image" content="https://cdn.spapi.online/avatar.png">
+  <meta property="og:image" content="https://cdn.glitch.global/2a4d780f-b9e8-4739-9886-831c1d5fcdb0/Cropped_Image.png?v=1718292596398">
   <meta property="theme-color" data-react-helmet="true" content="#FF0000" />
     <meta name="copyright" content="(C) Duck Dev">
   <meta name="google-site-verification" content="TgzP7QBk7aJUOU81Rk3-YatlUgY5mgScp_cm4NDWsTE" />
     <meta name="robots" content="all" />
   <meta name="msvalidate.01" content="7EE964A5F07FCC7A69530A56265277D8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="shortcut icon" type="image/x-icon" href="https://cdn.spapi.online/avatar.png">
-  <link type="application/json+oembed" href="https://duck.is-a.dev/oembed.json" />
+    <link rel="shortcut icon" type="image/x-icon" href="https://cdn.glitch.global/2a4d780f-b9e8-4739-9886-831c1d5fcdb0/Cropped_Image.png?v=1718292596398">
+  <link type="application/json+oembed" href="/oembed.json" />
 
     <!-- STYLESHEETS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -128,7 +128,7 @@ html:after {
                 <!-- intro -->
                 <div class="intro">
                     <!-- avatar image -->
-                    <img src="https://cdn.spapi.online/avatar.png" alt="Avatar" class="mb-4 rounded-circle" height="250" width="250" />
+                    <img src="https://cdn.glitch.global/2a4d780f-b9e8-4739-9886-831c1d5fcdb0/Cropped_Image.png?v=1718292596398" alt="Avatar" class="mb-4 rounded-circle" height="250" width="250" />
 
                     <!-- info -->
                     <h1 class="mb-2 mt-0">Duck Dev | Soumalya Ghosh</h1>
@@ -139,7 +139,7 @@ html:after {
 			<li class="list-inline-item"><a href="https://www.npmjs.com/~serverdeveloper9447"><i class="fab fa-npm" aria-hidden="true"></i></a></li>
 			<li class="list-inline-item"><a href="https://twitter.com/Soumalyaplayz"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
                         <li class="list-inline-item"><a href="https://github.com/ServerDeveloper9447"><i class="fab fa-github" aria-hidden="true"></i></a></li>
-                        <li class="list-inline-item"><a href="https://discord.gg/VqA92g8"><i class="fab fa-discord" aria-hidden="true"></i></a></li>
+                        <li class="list-inline-item"><a href="https://discord.gg/VqA92g8"><i class="fab fa-revolt" aria-hidden="true"></i></a></li>
                       <li class="list-inline-item"><a href="https://guilded.gg/u/duckdev"><i class="fab fa-guilded" aria-hidden="true"></i></a></li>
                     </ul>
 
@@ -204,7 +204,7 @@ html:after {
                     <div class="col-md-3">
                         <div class="text-center text-md-left">
                             <!-- avatar image -->
-                            <img src="https://cdn.spapi.online/avatar.png" alt="avatar" class="rounded" />
+                            <img src="https://cdn.glitch.global/2a4d780f-b9e8-4739-9886-831c1d5fcdb0/Cropped_Image.png?v=1718292596398" alt="avatar" class="rounded" />
                         </div>
                         <div class="spacer d-md-none d-lg-none" data-height="30"></div>
                     </div>
@@ -224,11 +224,11 @@ html:after {
                                     <!-- skill item -->
                                     <div class="skill-item">
                                         <div class="skill-info clearfix">
-                                            <h4 class="float-left mb-3 mt-0">Guilded Bot Economy Commands</h4>
-                                            <span class="float-right">34%</span>
+                                            <h4 class="float-left mb-3 mt-0">Revolt Bot</h4>
+                                            <span class="float-right">12%</span>
                                         </div>
                                         <div class="progress">
-                                            <div class="progress-bar data-background" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="34" data-color="#FF0000" style="background-color: #fbb034; background-image: linear-gradient(315deg, #ff9900 0%, #ffee20 74%);">
+                                            <div class="progress-bar data-background" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="12" data-color="#FF0000" style="background-color: #fbb034; background-image: linear-gradient(315deg, #ff9900 0%, #ffee20 74%);">
                                             </div>
                                         </div>
                                         <div class="spacer" data-height="20"></div>
@@ -237,26 +237,14 @@ html:after {
                                     <!-- skill item -->
                                     <div class="skill-item">
                                         <div class="skill-info clearfix">
-                                            <h4 class="float-left mb-3 mt-0">Guilded Bot 300 Server Aim</h4>
-                                            <span class="float-right">77%</span>
+                                            <h4 class="float-left mb-3 mt-0">Guilded Bot 5000 Server Aim</h4>
+                                            <span class="float-right">41%</span>
                                         </div>
                                         <div class="progress">
-                                            <div class="progress-bar data-background" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="77" data-color="#F47FFF" style="background-color: #bf033b; background-image: linear-gradient(315deg, #ca2858 0%, #ff6319 74%);">
+                                            <div class="progress-bar data-background" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="41" data-color="#F47FFF" style="background-color: #bf033b; background-image: linear-gradient(315deg, #ca2858 0%, #ff6319 74%);">
                                             </div>
                                         </div>
                                         <div class="spacer" data-height="20"></div>
-                                    </div>
-
-                                    <!-- skill item -->
-                                    <div class="skill-item">
-                                        <div class="skill-info clearfix">
-                                            <h4 class="float-left mb-3 mt-0">Guilded Bot Web Dashboard</h4>
-                                            <span class="float-right">3%</span>
-                                        </div>
-                                        <div class="progress">
-                                            <div class="progress-bar data-background" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="3" data-color="#6C6CE5" style="background-color: #6617cb; background-image: linear-gradient(315deg, #5a07c3 0%, #a733ff 74%);}">
-                                            </div>
-                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -370,7 +358,7 @@ html:after {
                     
                     <div class="col-md-4">
                         <div class="service-box rounded data-background padding-30 text-center shadow-red" data-color="#5865F2">
-                            <img src="https://cdn.spapi.online/avatar.png" alt="CDN" height="100" width="100" class="rounded" />
+                            <img src="https://cdn.glitch.global/2a4d780f-b9e8-4739-9886-831c1d5fcdb0/Cropped_Image.png?v=1718292596398" alt="CDN" height="100" width="100" class="rounded" />
                             <h3 class="mb-3 mt-0" style="color: #ff0000;"><a href="https://cdn.spapi.online" target="_blank">CDN</a></h3>
                             <p class="mb-0" style="color: #010101;">My own CDN with some random memes.</p>
                         </div>
