--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@ html:after {
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="shortcut icon" type="image/x-icon" href="https://cdn.glitch.global/2a4d780f-b9e8-4739-9886-831c1d5fcdb0/Cropped_Image.png?v=1718292596398">
   <link type="application/json+oembed" href="/oembed.json" />
+  <script src="https://unpkg.com/cursor-effects@latest/dist/browser.js"></script>
 
     <!-- STYLESHEETS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -100,22 +101,13 @@ html:after {
         <div class="container">
 
             <nav class="navbar navbar-expand-lg navbar-dark">
-                <a class="navbar-brand" href="#"><pre>
-░       ░░░  ░░░░  ░░░      ░░░  ░░░░  ░░░░░░░░       ░░░        ░░  ░░░░  ░<br>
-▒  ▒▒▒▒  ▒▒  ▒▒▒▒  ▒▒  ▒▒▒▒  ▒▒  ▒▒▒  ▒▒▒▒▒▒▒▒▒  ▒▒▒▒  ▒▒  ▒▒▒▒▒▒▒▒  ▒▒▒▒  ▒<br>
-▓  ▓▓▓▓  ▓▓  ▓▓▓▓  ▓▓  ▓▓▓▓▓▓▓▓     ▓▓▓▓▓▓▓▓▓▓▓  ▓▓▓▓  ▓▓      ▓▓▓▓▓  ▓▓  ▓▓<br>
-█  ████  ██  ████  ██  ████  ██  ███  █████████  ████  ██  ██████████    ███<br>
-█       ████      ████      ███  ████  ████████       ███        █████  ████<br>
-                                                                            
-</pre></a> <button aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarNavDropdown" data-toggle="collapse"
+                <a class="navbar-brand" href="#">Quack!</a> <button aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarNavDropdown" data-toggle="collapse"
                     type="button"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav ml-auto scrollspy">
                         <li class="nav-item"><a href="#about" class="nav-link">About Me</a></li>
                         <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
                         <li class="nav-item"><a href="#lih" class="nav-link">Life is Hard!!!</a></li>
-                        <!-- <li class="nav-item"><a href="#works" class="nav-link">Works</a></li>-->
-                        <!-- <li class="nav-item"><a href="#blog" class="nav-link">Posts</a></li>-->
                         <li class="nav-item"><a href="#git" class="nav-link">Get In Touch</a></li>
                     </ul>
                 </div>
@@ -336,7 +328,7 @@ html:after {
                         <!-- service box -->
                         <div class="service-box rounded data-background padding-30 text-center text-light shadow-pink" data-color="#4ED5F2">
                             <img src="https://pg.spapi.online/favicon.ico" width="85px" alt="code" class="rounded" />
-                          <h3 class="mb-3 mt-0" style="color: #de5833;"><a href="https://guilded.gg/powerguilds" target="_blank">Power Guilds</a></h3>
+                          <h3 class="mb-3 mt-0"><a href="https://guilded.gg/powerguilds" target="_blank" style="color: #010101;">Power Guilds</a></h3>
                           <p class="mb-0" style="color: #010101;">Powerful bot giving a new shape to Guilded servers.</p>                            
                         </div>
                         <div class="spacer d-md-none d-lg-none" data-height="30"></div>
@@ -347,7 +339,7 @@ html:after {
                         <!-- service box -->
                         <div class="service-box rounded data-background padding-30 text-center text-light shadow-blue" data-color="#6C6CE5">
                             <img src="images/js.svg" width="85px" alt="npm wrapper" />
-                            <h3 class="mb-3 mt-0" style="color: #CC0000;"><a href="https://spapi.online" target="_blank">API</a></h3>
+                            <h3 class="mb-3 mt-0" style="color: #010101;"><a href="https://spapi.online" target="_blank" style="color: #010101;">API</a></h3>
                             <p class="mb-0" style="color: #010101;">Making a advanced API throught Javascript is probably my first step towards being a full stack dev.</p>
                         </div>
                         <div class="spacer d-md-none d-lg-none" data-height="30"></div>
@@ -600,7 +592,9 @@ html:after {
     <script src="js/jquery.magnific-popup.min.js"></script>
     <script src="js/custom.js"></script>
     <script src="myscript.js"></script>
-
+    <script>
+  
+  </script>
 </body>
 
 </html>
