🌊🚵 Checkpoint ./index.html:31916058/142

--- a/index.html
+++ b/index.html
@@ -593,7 +593,9 @@ html:after {
     <script src="js/custom.js"></script>
     <script src="myscript.js"></script>
     <script>
-  
+    window.addEventListener('load',() => {
+      new cursoreffects.followingDotCursor({ color: ["#df4949"] })
+    })
   </script>
 </body>
 
