--- a/404.html
+++ b/404.html
@@ -1,13 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>404 | Saksham Shekher - Student | Developer</title>
+    <title>404 | Soumalya Ghosh</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="author" content="Saksham Shekher">
-    <meta name="copyright" content="This Created by Saksham Shekher">
-    <meta name="robots" content="all" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
     
     <link rel="stylesheet" type="text/css" href="css/style-404.css">
 </head>
