--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
             </div>
             <div class="central-body">
                 <img class="image-404" src="img-404/404.svg" width="300px">
-                <a href="#" class="btn-go-home">GO BACK HOME</a>
+                <a href="/" class="btn-go-home">GO BACK HOME</a>
             </div>
             <div class="objects">
                 <img class="object_rocket" src="img-404/rocket.svg" width="40px">
