--- a/index.html
+++ b/index.html
@@ -381,12 +381,22 @@ html:after {
                         <!-- timeline wrapper -->
                         <div class="timeline edu bg-dark rounded shadow-dark padding-30 overflow-hidden">
 
+
+                            <!-- timeline item -->
+                            <div class="timeline-container wow fadeInUp">
+                                <div class="content">
+                                    <span class="time">2024 - Present</span>
+                                    <h3 class="title">College</h3>
+                                    <p>Studying BTech with Computer Science</p>
+                                </div>
+                            </div>
+
                           <!-- timeline item -->
                             <div class="timeline-container wow fadeInUp">
                                 <div class="content">
                                     <span class="time">2023 - 2024</span>
                                     <h3 class="title">Higher Secondary</h3>
-                                    <p>Passed. Prepairing for college.</p>
+                                    <p>Passed.</p>
                                 </div>
                             </div>  
                           
@@ -553,8 +563,8 @@ html:after {
                         <!-- contact info -->
                         <div class="contact-info">
                             <h3 class="wow fadeInUp">Let's talk about coding!</h3>
-                            <p class="wow fadeInUp">Send me an <a href="mailto:craftblurdiscord@gmail.com">Email</a>. 👋</p>
-                            <li><b>Email :</b>&nbsp; <a href="mailto:craftblurdiscord+portfolio@gmail.com" style="color: #05caf7;">craftblurdiscord@gmail.com</a></li>
+                            <p class="wow fadeInUp">Send me an <a href="mailto:serverdeveloper@duck.com">Email</a>. 👋</p>
+                            <li><b>Email :</b>&nbsp; <a href="mailto:serverdeveloper@duck.com" style="color: #05caf7;">serverdeveloper@duck.com</a></li>
                             <li><b>Developer :</b>&nbsp; <a href="https://discord.com/users/588336437011939341" style="color: #05caf7;"> @serverdeveloper</a> <a href="https://guilded.gg/u/duckdev">@duckdev</a></li>
                         </div>
                     </div> 
