Added linkedin and fixed image

--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@ html:after {
 			<li class="list-inline-item"><a href="https://www.npmjs.com/~serverdeveloper9447"><i class="fab fa-npm" aria-hidden="true"></i></a></li>
 			<li class="list-inline-item"><a href="https://twitter.com/Soumalyaplayz"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
                         <li class="list-inline-item"><a href="https://github.com/ServerDeveloper9447"><i class="fab fa-github" aria-hidden="true"></i></a></li>
+                        <li class="list-inline-item"><a href="https://www.linkedin.com/in/soumalya-ghosh-0a0bb8274/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
                         <li class="list-inline-item"><a href="https://discord.gg/VqA92g8"><i class="fab fa-discord" aria-hidden="true"></i></a></li>
                       <li class="list-inline-item"><a href="https://guilded.gg/u/duckdev"><i class="fab fa-guilded" aria-hidden="true"></i></a></li>
                     </ul>
@@ -326,7 +327,7 @@ html:after {
                     <div class="col-md-4">
                         <!-- service box -->
                         <div class="service-box rounded data-background padding-30 text-center text-light shadow-pink" data-color="#4ED5F2">
-                            <img src="https://pg.spapi.online/favicon.ico" width="85px" alt="code" class="rounded" />
+                            <img src="https://powerguilds.foo.ng/assets/favicon.png" width="85px" alt="code" class="rounded" />
                           <h3 class="mb-3 mt-0"><a href="https://guilded.gg/powerguilds" target="_blank" style="color: #010101;">Power Guilds</a></h3>
                           <p class="mb-0" style="color: #010101;">Powerful bot giving a new shape to Guilded servers.</p>                            
                         </div>
